@@ -21,6 +21,13 @@
 === UPGRADE-12.txt  -- Upgrade info for 11 to 12
 ===========================================================
 
+From 13.4.0 to 13.5.0:
+
+AMI:
+ - The version of AMI has been bumped to 2.8.0 to account for backwards
+   compatible features included with this release.  See CHANGES for more
+   information.
+
 From 13.3.0 to 13.4.0:
 
 Source Control:
